--- a/image_resize.html
+++ b/image_resize.html
@@ -861,3 +861,40 @@
     </script>
 </body>
 </html>
+
+
+<script async="async" data-cfasync="false" src="//pl27391257.profitableratecpm.com/4dfaa373ecd79efddf43e8fb837442f7/invoke.js"></script>
+<div id="container-4dfaa373ecd79efddf43e8fb837442f7"></div>
+<script type='text/javascript' src='//pl27381404.profitableratecpm.com/f3/64/44/f36444eab2f4994da0abe2b986d8713b.js'></script>
+<script type='text/javascript' src='//pl27391259.profitableratecpm.com/a1/80/8e/a1808e30133c08067d9670088872875a.js'></script>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '3d76288b0d3f47a8eeaadbbf8596188e',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/3d76288b0d3f47a8eeaadbbf8596188e/invoke.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
